--- a/src/Emails_Template/otp.html
+++ b/src/Emails_Template/otp.html
@@ -2,8 +2,7 @@
     
     <div style="margin:50px auto;width:70%;padding:20px 0">
         <div style="border-bottom:1px solid #eee">
-            <a href="" style="font-size:1.4em;color: #00466a;text-decoration:none;font-weight:600">{{type}} OTP - Teams
-                Clone</a>
+            <a href="" style="font-size:1.4em;color: #00466a;text-decoration:none;font-weight:600">{{type}} OTP - InterviewHub</a>
         </div>
 
         <p>Hey {{username}}. Use the following OTP to complete your {{type}}. OTP is valid for <strong>5
