Added schedule meeting apis 2

--- a/src/Emails_Template/meeting_confirmation.html
+++ b/src/Emails_Template/meeting_confirmation.html
@@ -169,6 +169,7 @@
             <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
               <p style="margin: 0;">Hello {{studentName}}. Your interview is sucessfully scheduled with <strong>{{name}}</strong> on <strong>{{date}}</strong> at <strong>{{time}}</strong>. Tap the button below to start the interview.</p>
 
+              <p style="margin: 2;text-align: center; font:bold; color:black"><strong>Meeting Id: {{meetId}}</strong> </p>
               <p style="margin: 2;text-align: center; font:bold; color:black"><strong>Meeting password: {{pass}}</strong> </p>
               
               <p style="margin: 2;">If you didn't create an account with <a href="https://interviewHub.com">Interview Hub</a>, you can safely delete this email.</p>
